--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio Practice</title>
-</head>
-<body>
-    <header>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
+  </head>
+  <body class="open-sans-normal">
+    <header class="header secondary-bg">
+      <nav>
+        <h3 class="nav-title">Ni<span class="nav-colour">s</span>ha</h3>
+        <ul class="nav ul li">
+          <li><a class="dark-2" href="">About</a></li>
+          <li><a class="dark-2" href="">Projects</a></li>
+          <li>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+            <h4 class="banner-greetings dark-2">Hi,I am</h4>
+            <h1 class="banner-title">Sidratul <span class="nav-colour">Munataha</span> Nisha</h1>
+            <p class="class-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <a href=""><button class="btn-primary">Download CV</button></a>
+            <a href=""><button class="btn-primary">Contact</button></a>
+        </div>
+        <img class="profile" src="images/Nisha.jpg" alt="">
+      </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title"> About Me</h3>
+            <p class="section-description"> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and 
+slick websites that provide real value to the end user. Thousands of clients have procured 
+exceptional resulfs while working with me. Delivering work within time and budget which meets 
+clients requirements in our mata.</p>
+<div class="about-iteams">
+    <div class="about-iteam">
+        <p class="iteam-title">Name</p>
+        <p class="iteam-description">Sidratul Muntaha Nisha</p>
+    </div>
+    <div class="about-iteam">
+        <p class="iteam-title">Email</p>
+        <p class="iteam-description">Nisha@gmail.com</p>
+    </div>
+    <div class="about-iteam">
+        <p class="iteam-title">Date of Birth</p>
+        <p class="iteam-description">1 march,2002</p>
+    </div>
+    <div class="about-iteam">
+        <p class="iteam-title">From</p>
+        <p class="iteam-description">Chattagram,Bangladesh</p>
+    </div>
+</div>
 
+        </section>
+            
     </main>
-    <footer>
-
-    </footer>
-    
-</body>
+    <footer></footer>
+  </body>
 </html>
